--- a/style.css
+++ b/style.css
@@ -10,6 +10,20 @@
 
 html {
   font-size: 62.5%;
+  scroll-behavior: smooth;
+}
+
+body {
+  /*
+* Created with https://www.css-gradient.com
+* Gradient link: https://www.css-gradient.com/?c1=0e0d0e&c2=ececee&gt=c&gd=dtr
+*/
+  background: rgba(14, 13, 14, 1);
+  background: conic-gradient(
+    from 45deg,
+    rgb(177, 174, 177),
+    rgba(236, 236, 238, 1)
+  );
 }
 
 /* NAVBAR STYLES */
@@ -53,6 +67,12 @@ span {
   border: 1px solid #c3c3c3;
   border-radius: 33px;
   padding: 0.5rem 1rem;
+  background: rgba(14, 13, 14, 1);
+  background: conic-gradient(
+    from -45deg,
+    rgb(159, 156, 159),
+    rgba(236, 236, 238, 1)
+  );
 }
 
 .nav-link {
@@ -156,6 +176,7 @@ header h4 {
   font-weight: 500;
   max-width: 70%;
   margin: auto;
+  margin-bottom: 3rem;
 }
 
 /* WORK SECTION STYLES */
@@ -173,16 +194,13 @@ header h4 {
 }
 
 .works-list li:hover {
-  background-color: #1b1b1b;
+  background-color: #c3c3c3;
+  cursor: pointer;
 }
 .works-list li a {
   font-size: 1.5rem;
   color: #1b1b1b;
   font-weight: 500;
-}
-
-.works-list li a:hover {
-  color: #fff;
 }
 
 .works-list .active {
@@ -192,12 +210,33 @@ header h4 {
   color: #fff;
 }
 
+.works-list .active a:hover {
+  color: #1b1b1b;
+}
+
+.work-btn a {
+  background-color: transparent;
+  color: #1b1b1b;
+  padding: 0;
+  font-size: 1.5rem;
+  font-weight: 500;
+  border-radius: 0;
+  transition: all 0.3s ease-in-out;
+  text-decoration: underline;
+}
+
+.work-btn a:hover {
+  background-color: transparent;
+}
+
 .grid {
   max-width: 1350px;
   width: 100%;
-  height: 768px;
+  /* height: 768px; */
+  height: auto;
+  margin: auto;
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(333px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
   gap: 2rem;
 }
 
@@ -316,7 +355,7 @@ header h4 {
   }
 
   .right img {
-    width: 170px;
+    width: 180px;
     filter: drop-shadow(7px 7px 3px #1b1b1b);
   }
 
@@ -332,6 +371,7 @@ header h4 {
     font-weight: 400;
     max-width: 100%;
     margin: 0;
+    margin-bottom: 3rem;
     text-align: center;
   }
 }
