--- a/style.css
+++ b/style.css
@@ -372,6 +372,93 @@ header h4 {
   transform: translateY(-7px);
 }
 
+/* FOOTER SECTION STYLES */
+
+.row {
+  display: flex;
+  align-items: center;
+  /* justify-content: space-around; */
+}
+
+.row .contact-left span {
+  color: #1b1b1b;
+  font-family: "Wallpoet", sans-serif;
+}
+
+.contact-left {
+  flex-basis: 35%;
+}
+
+.contact-left p {
+  font-size: 1.55rem;
+}
+.contact-left p i {
+  color: #ab1243;
+  margin-right: 15px;
+  font-size: 2.5rem;
+}
+.social-icons {
+  margin-top: 3rem;
+}
+
+.social-icons a {
+  font-size: 3rem;
+  margin-right: 15px;
+  color: #434040;
+  display: inline-block;
+  transition: transform 0.5s ease;
+}
+
+.social-icons a:hover {
+  color: #ab1243;
+  transform: translateY(-5px);
+}
+
+.contact-right {
+  flex-basis: 60%;
+}
+
+.contact-right form {
+  width: 100%;
+}
+
+form input,
+form textarea {
+  width: 100%;
+  border: 0;
+  outline: none;
+  background: #262626;
+  padding: 15px;
+  margin: 15px;
+  color: #fff;
+  font-size: 1.8rem;
+  border-radius: 7px;
+}
+
+.contact-right .btn {
+  padding: 14px 60px;
+  font-size: 1.8rem;
+  font-weight: 600;
+  margin: 3rem 15px;
+  cursor: pointer;
+  background-color: #ab1243;
+  color: #fff;
+  border-radius: 7px;
+}
+
+.copyright {
+  width: 100%;
+  text-align: center;
+  color: #fff;
+  padding: 2rem;
+  background: #262626;
+  font-weight: 400;
+  margin-top: 2em;
+}
+.copyright span {
+  font-size: 1.31rem;
+  margin-left: 0.92rem;
+}
 /* RESPONSIVE BREAKPOINTS */
 
 @media (max-width: 1040px) {
