--- a/style.css
+++ b/style.css
@@ -62,6 +62,7 @@ span {
 }
 
 .navbar {
+  position: relative;
   margin-left: auto;
   display: flex;
   gap: 3rem;
@@ -693,6 +694,73 @@ form textarea {
     font-size: 1.5rem;
     font-weight: 400;
     margin: 0 10px 20px 10px;
+  }
+}
+
+@media (max-width: 375px) {
+  .container {
+    flex-direction: column;
+    gap: 0.5rem;
+    margin: 0;
+    margin-top: 8px;
+  }
+
+  .navbar {
+    background: conic-gradient(
+      from -135deg,
+      rgb(175, 169, 175),
+      rgb(249, 249, 249)
+    );
+  }
+
+  .logo {
+    flex-direction: column;
+  }
+
+  .logo img {
+    width: 40px;
+    height: 40px;
+  }
+
+  header {
+    align-items: center;
+    max-width: 100%;
+    margin: auto;
+    padding: 0 0.5rem;
+    padding-top: 1rem;
+    /* margin: 1.33rem 3rem; */
+    transition: all 0.3s ease;
+  }
+
+  header h1 {
+    font-size: 4rem;
+    line-height: 5.5rem;
+  }
+
+  header h4 {
+    font-size: 1.75rem;
+    margin-bottom: 2rem;
+  }
+
+  .right img {
+    width: 150px;
+    filter: drop-shadow(7px 7px 3px #1b1b1b);
+  }
+
+  .about {
+    padding: 5rem 1.6rem;
+  }
+
+  .about h3 {
+    font-size: 1.78rem;
+  }
+
+  .services-list div {
+    padding: 1.5rem;
+  }
+
+  .grid {
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   }
 }
 
