--- a/style.css
+++ b/style.css
@@ -435,7 +435,7 @@ header h4 {
 
 /* WORK SECTION STYLE END */
 
-/* SERVICES SECTION STYLE */
+/* SERVICES SECTION STYLE----------------------------- */
 
 .services-list {
   max-width: 1200px;
@@ -522,6 +522,84 @@ header h4 {
   transform: translateY(-7px);
 }
 
+/* SKILLS SECTION STYLE----------------------------------------------------- */
+.skills-list {
+  max-width: 1200px;
+  width: 100%;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  gap: 4rem;
+  margin: auto;
+  margin-top: 5rem;
+}
+
+.skills-list div {
+  padding: 4rem;
+  font-size: 1.33rem;
+  font-weight: 400;
+  border-radius: 11px;
+  box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
+    rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
+}
+
+.card h3 {
+  text-align: left;
+  margin: 0;
+  margin-bottom: 1.5rem;
+}
+
+.card i {
+  font-size: 5.3rem;
+  color: #173da7;
+  margin-bottom: 1.33rem;
+  margin-top: 1rem;
+}
+
+.card p {
+  color: #273e7d;
+  color: #262626;
+  font-weight: 300;
+  line-height: 20px;
+  font-size: 1.75rem;
+}
+
+.card {
+  position: relative;
+  overflow: hidden;
+  transition: all 0.3s ease-in-out;
+}
+
+.card::before {
+  content: "";
+  position: absolute;
+  top: var(--y);
+  left: var(--x);
+  transform: translate(-50%, -50%);
+  position: absolute;
+  background: radial-gradient(var(--clr), transparent, transparent);
+  z-index: -1;
+  width: 700px;
+  height: 700px;
+  opacity: 0;
+  transition: 0.5s, top 0s, left 0s;
+}
+
+.card:hover::before {
+  opacity: 0.75;
+}
+
+.card:hover {
+  box-shadow: 3px 3px 11px #181818;
+
+  cursor: pointer;
+}
+
+.card::after {
+  content: "";
+  position: absolute;
+  inset: 2px;
+  /* border-radius: 18px; */
+}
 /* FOOTER SECTION STYLES */
 .contact {
   padding-left: 0;
@@ -614,7 +692,7 @@ form textarea {
   position: fixed;
   color: #ffff;
   background-color: #ab1243;
-  bottom: 100px;
+  bottom: 50px;
   right: 50px;
   font-size: 2rem;
   padding: 0.5rem;
@@ -638,6 +716,14 @@ form textarea {
 .copyright span {
   font-size: 1.51rem;
   margin-left: 0.92rem;
+}
+
+#msg {
+  color: #f1f1f1;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-size: 1.23rem;
+  margin: 0 0 20px 15px;
+  display: block;
 }
 
 /* RESPONSIVE BREAKPOINTS */
@@ -803,11 +889,11 @@ form textarea {
     padding: 10px 30px;
     font-size: 1.5rem;
     font-weight: 400;
-    margin: 0 10px 20px 10px;
+    margin: 0 10px 10px;
   }
 
   .contact .gotop-btn i {
-    bottom: 85px;
+    bottom: 50px;
     right: 50px;
   }
 }
